test/fail/if-drop-semi.rnp
if true { 1 } else { 2 }
---
SyntaxError: If expression in statement position with value must have a semicolon
fail/if-drop-semi.rnp:1:1
if true { 1 } else { 2 }
^^^^^^^^^^^^^^^^^^^^^^^^
